--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,40 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0; }
+
 .container {
+    max-width: 600px;
+    margin: 50px auto;
     padding: 20px;
-    border-radius: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.container h1 {
-    text-align: center;
-}
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+
+h1 {
+    text-align: center; }
+
 label {
-    font-weight: bold;
-}
-input, select {
+    display: block;
+    margin-bottom: 10px; }
+
+select, button {
+    display: block;
     width: 100%;
-    padding: 8px;
     margin-bottom: 20px;
-    border: 1px solid;
-    border-radius: 20px;
-    box-sizing: border-box;
-}
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px; }
+
 button {
-    padding: 10px 20px;
-    background-color: #3f796c;
+    background-color: #007bff;
     color: #fff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-}
+    cursor: pointer; }
+
+button:hover {
+    background-color: #0056b3; }
+
 #output {
-    margin-top: 20px;
-    padding-top: 20px;
-}
+    margin-top: 20px; }
